deployment/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: halfmoon-angular-test
  labels:
    app.kubernetes.io/name: halfmoon-angular-test
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: halfmoon-angular-test
  template:
    metadata:
      labels:
        app.kubernetes.io/name: halfmoon-angular-test
    spec:
      containers:
        - name: halfmoon-angular-test
          image: officialmkl/halfmoon-angular-test:latest
          ports:
            - containerPort: 80
