deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: halfmoon-angular-test
  labels:
    app.kubernetes.io/name: halfmoon-angular-test
spec:
  selector:
    app.kubernetes.io/name: halfmoon-angular-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
