deployment/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: halfmoon-angular-test
spec:
  rules:
    - host: 'halfmoon-angular-test.officialmkl.cloud.okteto.net'
      http:
        paths:
          - path: '/'
            backend:
              serviceName: halfmoon-angular-test
              servicePort: 80
